--- a/gdalBuilder/gdalBuilder.vcxproj
+++ b/gdalBuilder/gdalBuilder.vcxproj
@@ -24,6 +24,12 @@
     <ClCompile Include="TerrainTile.cpp" />
     <ClCompile Include="TerrainTiler.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="gdalBuilder.rc" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
