--- a/gdalConvert/gdalConvert.vcxproj.filters
+++ b/gdalConvert/gdalConvert.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="gdalConvert_unmanaged.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -26,5 +29,10 @@
     <ClCompile Include="gdalConvert_unmanaged.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="gdalConvert.rc">
+      <Filter>资源文件</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
