--- a/gdalToTMS/gdalToTMS.vcxproj.filters
+++ b/gdalToTMS/gdalToTMS.vcxproj.filters
@@ -44,5 +44,13 @@
     <ClInclude Include="gdalToTMS_metadata.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="gdalToTMS.rc">
+      <Filter>资源文件</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
