--- a/process_gdal_transform/process_gdal_transform.vcxproj.filters
+++ b/process_gdal_transform/process_gdal_transform.vcxproj.filters
@@ -18,12 +18,24 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="transform_launch.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="transform_unity.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="transform_unmanaged.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="transform_launch.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="transform_unity.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
